java 21 features broke project